WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245018
angle_version.h and angle_version_info.h should not use the same header guard macro
https://bugs.webkit.org/show_bug.cgi?id=245018
Summary
angle_version.h and angle_version_info.h should not use the same header guard...
David Kilzer (:ddkilzer)
Reported
2022-09-09 20:56:36 PDT
angle_version.h and angle_version_info.h should not use the same header guard macro. Currently they both use: #ifndef COMMON_VERSION_H_ #define COMMON_VERSION_H_ [...] #endif // COMMON_VERSION_H_ Found by CodeQL.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-09 20:57:01 PDT
<
rdar://problem/99770768
>
David Kilzer (:ddkilzer)
Comment 2
2022-09-09 21:00:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4212
EWS
Comment 3
2022-09-11 22:46:57 PDT
Committed
254370@main
(1a61b3dac3ce): <
https://commits.webkit.org/254370@main
> Reviewed commits have been landed. Closing PR #4212 and removing active labels.
Kimmo Kinnunen
Comment 4
2022-09-12 07:29:35 PDT
https://chromium-review.googlesource.com/c/angle/angle/+/3891372
https://bugs.chromium.org/p/angleproject/issues/detail?id=7650
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug