Cherry-pick 1a61b3dac3ce. rdar://problem/103539298

angle_version.h and angle_version_info.h should not use the same header guard macro
    https://bugs.webkit.org/show_bug.cgi?id=245018
    <rdar://99770768>

    Reviewed by Kimmo Kinnunen.

    * Source/ThirdParty/ANGLE/changes.diff: Update.
    * Source/ThirdParty/ANGLE/src/common/angle_version_info.h:
    - Change header guard to COMMON_VERSION_INFO_H_ so that it
      differs from COMMON_VERSION_H_ in angle_version.h.

    Canonical link: https://commits.webkit.org/254370@main

Canonical link: https://commits.webkit.org/252432.972@safari-7614-branch